# ai-sports-predict

./: LICENSE  README.md  pyproject.toml
src/: main.py
